# social-network/gen/serverhttp/server.go
@@ -22,6 +22,21 @@ const (
 // BirthDate Дата рождения
 type BirthDate = openapi_types.Date
 
+// DialogMessage defines model for DialogMessage.
+type DialogMessage struct {
+	// From Идентификатор пользователя
+	From UserId `json:"from"`
+
+	// Text Текст сообщения
+	Text DialogMessageText `json:"text"`
+
+	// To Идентификатор пользователя
+	To UserId `json:"to"`
+}
+
+// DialogMessageText Текст сообщения
+type DialogMessageText = string
+
 // Post Пост пользователя
 type Post struct {
 	// AuthorUserId Идентификатор пользователя
@@ -74,6 +89,12 @@ type N5xx struct {
 
 	// RequestId Идентификатор запроса. Предназначен для более быстрого поиска проблем.
 	RequestId *string `json:"request_id,omitempty"`
+}
+
+// PostDialogUserIdSendJSONBody defines parameters for PostDialogUserIdSend.
+type PostDialogUserIdSendJSONBody struct {
+	// Text Текст сообщения
+	Text DialogMessageText `json:"text"`
 }
 
 // PostLoadtestWriteJSONBody defines parameters for PostLoadtestWrite.
@@ -130,6 +151,9 @@ type GetUserSearchParams struct {
 	LastName string `form:"last_name" json:"last_name"`
 }
 
+// PostDialogUserIdSendJSONRequestBody defines body for PostDialogUserIdSend for application/json ContentType.
+type PostDialogUserIdSendJSONRequestBody PostDialogUserIdSendJSONBody
+
 // PostLoadtestWriteJSONRequestBody defines body for PostLoadtestWrite for application/json ContentType.
 type PostLoadtestWriteJSONRequestBody PostLoadtestWriteJSONBody
 
@@ -147,6 +171,12 @@ type PostUserRegisterJSONRequestBody PostUserRegisterJSONBody
 
 // ServerInterface represents all server handlers.
 type ServerInterface interface {
+
+	// (GET /dialog/{user_id}/list)
+	GetDialogUserIdList(ctx echo.Context, userId UserId) error
+
+	// (POST /dialog/{user_id}/send)
+	PostDialogUserIdSend(ctx echo.Context, userId UserId) error
 
 	// (PUT /friend/delete/{user_id})
 	PutFriendDeleteUserId(ctx echo.Context, userId UserId) error
@@ -188,6 +218,42 @@ type ServerInterface interface {
 // ServerInterfaceWrapper converts echo contexts to parameters.
 type ServerInterfaceWrapper struct {
 	Handler ServerInterface
+}
+
+// GetDialogUserIdList converts echo context to params.
+func (w *ServerInterfaceWrapper) GetDialogUserIdList(ctx echo.Context) error {
+	var err error
+	// ------------- Path parameter "user_id" -------------
+	var userId UserId
+
+	err = runtime.BindStyledParameterWithLocation("simple", false, "user_id", runtime.ParamLocationPath, ctx.Param("user_id"), &userId)
+	if err != nil {
+		return echo.NewHTTPError(http.StatusBadRequest, fmt.Sprintf("Invalid format for parameter user_id: %s", err))
+	}
+
+	ctx.Set(BearerAuthScopes, []string{})
+
+	// Invoke the callback with all the unmarshaled arguments
+	err = w.Handler.GetDialogUserIdList(ctx, userId)
+	return err
+}
+
+// PostDialogUserIdSend converts echo context to params.
+func (w *ServerInterfaceWrapper) PostDialogUserIdSend(ctx echo.Context) error {
+	var err error
+	// ------------- Path parameter "user_id" -------------
+	var userId UserId
+
+	err = runtime.BindStyledParameterWithLocation("simple", false, "user_id", runtime.ParamLocationPath, ctx.Param("user_id"), &userId)
+	if err != nil {
+		return echo.NewHTTPError(http.StatusBadRequest, fmt.Sprintf("Invalid format for parameter user_id: %s", err))
+	}
+
+	ctx.Set(BearerAuthScopes, []string{})
+
+	// Invoke the callback with all the unmarshaled arguments
+	err = w.Handler.PostDialogUserIdSend(ctx, userId)
+	return err
 }
 
 // PutFriendDeleteUserId converts echo context to params.
@@ -405,6 +471,8 @@ func RegisterHandlersWithBaseURL(router EchoRouter, si ServerInterface, baseURL 
 		Handler: si,
 	}
 
+	router.GET(baseURL+"/dialog/:user_id/list", wrapper.GetDialogUserIdList)
+	router.POST(baseURL+"/dialog/:user_id/send", wrapper.PostDialogUserIdSend)
 	router.PUT(baseURL+"/friend/delete/:user_id", wrapper.PutFriendDeleteUserId)
 	router.PUT(baseURL+"/friend/set/:user_id", wrapper.PutFriendSetUserId)
 	router.POST(baseURL+"/loadtest/write", wrapper.PostLoadtestWrite)
@@ -442,6 +510,140 @@ type N5xxJSONResponse struct {
 	}
 
 	Headers N5xxResponseHeaders
+}
+
+type GetDialogUserIdListRequestObject struct {
+	UserId UserId `json:"user_id"`
+}
+
+type GetDialogUserIdListResponseObject interface {
+	VisitGetDialogUserIdListResponse(w http.ResponseWriter) error
+}
+
+type GetDialogUserIdList200JSONResponse []DialogMessage
+
+func (response GetDialogUserIdList200JSONResponse) VisitGetDialogUserIdListResponse(w http.ResponseWriter) error {
+	w.Header().Set("Content-Type", "application/json")
+	w.WriteHeader(200)
+
+	return json.NewEncoder(w).Encode(response)
+}
+
+type GetDialogUserIdList400Response = N400Response
+
+func (response GetDialogUserIdList400Response) VisitGetDialogUserIdListResponse(w http.ResponseWriter) error {
+	w.WriteHeader(400)
+	return nil
+}
+
+type GetDialogUserIdList401Response = N401Response
+
+func (response GetDialogUserIdList401Response) VisitGetDialogUserIdListResponse(w http.ResponseWriter) error {
+	w.WriteHeader(401)
+	return nil
+}
+
+type GetDialogUserIdList500JSONResponse struct{ N5xxJSONResponse }
+
+func (response GetDialogUserIdList500JSONResponse) VisitGetDialogUserIdListResponse(w http.ResponseWriter) error {
+	w.Header().Set("Content-Type", "application/json")
+	w.Header().Set("Retry-After", fmt.Sprint(response.Headers.RetryAfter))
+	w.WriteHeader(500)
+
+	return json.NewEncoder(w).Encode(response.Body)
+}
+
+type GetDialogUserIdList503ResponseHeaders struct {
+	RetryAfter int
+}
+
+type GetDialogUserIdList503JSONResponse struct {
+	Body struct {
+		// Code Код ошибки. Предназначен для классификации проблем и более быстрого решения проблем.
+		Code *int `json:"code,omitempty"`
+
+		// Message Описание ошибки
+		Message string `json:"message"`
+
+		// RequestId Идентификатор запроса. Предназначен для более быстрого поиска проблем.
+		RequestId *string `json:"request_id,omitempty"`
+	}
+	Headers GetDialogUserIdList503ResponseHeaders
+}
+
+func (response GetDialogUserIdList503JSONResponse) VisitGetDialogUserIdListResponse(w http.ResponseWriter) error {
+	w.Header().Set("Content-Type", "application/json")
+	w.Header().Set("Retry-After", fmt.Sprint(response.Headers.RetryAfter))
+	w.WriteHeader(503)
+
+	return json.NewEncoder(w).Encode(response.Body)
+}
+
+type PostDialogUserIdSendRequestObject struct {
+	UserId UserId `json:"user_id"`
+	Body   *PostDialogUserIdSendJSONRequestBody
+}
+
+type PostDialogUserIdSendResponseObject interface {
+	VisitPostDialogUserIdSendResponse(w http.ResponseWriter) error
+}
+
+type PostDialogUserIdSend200Response struct {
+}
+
+func (response PostDialogUserIdSend200Response) VisitPostDialogUserIdSendResponse(w http.ResponseWriter) error {
+	w.WriteHeader(200)
+	return nil
+}
+
+type PostDialogUserIdSend400Response = N400Response
+
+func (response PostDialogUserIdSend400Response) VisitPostDialogUserIdSendResponse(w http.ResponseWriter) error {
+	w.WriteHeader(400)
+	return nil
+}
+
+type PostDialogUserIdSend401Response = N401Response
+
+func (response PostDialogUserIdSend401Response) VisitPostDialogUserIdSendResponse(w http.ResponseWriter) error {
+	w.WriteHeader(401)
+	return nil
+}
+
+type PostDialogUserIdSend500JSONResponse struct{ N5xxJSONResponse }
+
+func (response PostDialogUserIdSend500JSONResponse) VisitPostDialogUserIdSendResponse(w http.ResponseWriter) error {
+	w.Header().Set("Content-Type", "application/json")
+	w.Header().Set("Retry-After", fmt.Sprint(response.Headers.RetryAfter))
+	w.WriteHeader(500)
+
+	return json.NewEncoder(w).Encode(response.Body)
+}
+
+type PostDialogUserIdSend503ResponseHeaders struct {
+	RetryAfter int
+}
+
+type PostDialogUserIdSend503JSONResponse struct {
+	Body struct {
+		// Code Код ошибки. Предназначен для классификации проблем и более быстрого решения проблем.
+		Code *int `json:"code,omitempty"`
+
+		// Message Описание ошибки
+		Message string `json:"message"`
+
+		// RequestId Идентификатор запроса. Предназначен для более быстрого поиска проблем.
+		RequestId *string `json:"request_id,omitempty"`
+	}
+	Headers PostDialogUserIdSend503ResponseHeaders
+}
+
+func (response PostDialogUserIdSend503JSONResponse) VisitPostDialogUserIdSendResponse(w http.ResponseWriter) error {
+	w.Header().Set("Content-Type", "application/json")
+	w.Header().Set("Retry-After", fmt.Sprint(response.Headers.RetryAfter))
+	w.WriteHeader(503)
+
+	return json.NewEncoder(w).Encode(response.Body)
 }
 
 type PutFriendDeleteUserIdRequestObject struct {
@@ -1284,6 +1486,12 @@ func (response GetUserSearch503JSONResponse) VisitGetUserSearchResponse(w http.R
 // StrictServerInterface represents all server handlers.
 type StrictServerInterface interface {
 
+	// (GET /dialog/{user_id}/list)
+	GetDialogUserIdList(ctx context.Context, request GetDialogUserIdListRequestObject) (GetDialogUserIdListResponseObject, error)
+
+	// (POST /dialog/{user_id}/send)
+	PostDialogUserIdSend(ctx context.Context, request PostDialogUserIdSendRequestObject) (PostDialogUserIdSendResponseObject, error)
+
 	// (PUT /friend/delete/{user_id})
 	PutFriendDeleteUserId(ctx context.Context, request PutFriendDeleteUserIdRequestObject) (PutFriendDeleteUserIdResponseObject, error)
 
@@ -1331,6 +1539,62 @@ func NewStrictHandler(ssi StrictServerInterface, middlewares []StrictMiddlewareF
 type strictHandler struct {
 	ssi         StrictServerInterface
 	middlewares []StrictMiddlewareFunc
+}
+
+// GetDialogUserIdList operation middleware
+func (sh *strictHandler) GetDialogUserIdList(ctx echo.Context, userId UserId) error {
+	var request GetDialogUserIdListRequestObject
+
+	request.UserId = userId
+
+	handler := func(ctx echo.Context, request interface{}) (interface{}, error) {
+		return sh.ssi.GetDialogUserIdList(ctx.Request().Context(), request.(GetDialogUserIdListRequestObject))
+	}
+	for _, middleware := range sh.middlewares {
+		handler = middleware(handler, "GetDialogUserIdList")
+	}
+
+	response, err := handler(ctx, request)
+
+	if err != nil {
+		return err
+	} else if validResponse, ok := response.(GetDialogUserIdListResponseObject); ok {
+		return validResponse.VisitGetDialogUserIdListResponse(ctx.Response())
+	} else if response != nil {
+		return fmt.Errorf("unexpected response type: %T", response)
+	}
+	return nil
+}
+
+// PostDialogUserIdSend operation middleware
+func (sh *strictHandler) PostDialogUserIdSend(ctx echo.Context, userId UserId) error {
+	var request PostDialogUserIdSendRequestObject
+
+	request.UserId = userId
+
+	var body PostDialogUserIdSendJSONRequestBody
+	if err := ctx.Bind(&body); err != nil {
+		return err
+	}
+	request.Body = &body
+
+	handler := func(ctx echo.Context, request interface{}) (interface{}, error) {
+		return sh.ssi.PostDialogUserIdSend(ctx.Request().Context(), request.(PostDialogUserIdSendRequestObject))
+	}
+	for _, middleware := range sh.middlewares {
+		handler = middleware(handler, "PostDialogUserIdSend")
+	}
+
+	response, err := handler(ctx, request)
+
+	if err != nil {
+		return err
+	} else if validResponse, ok := response.(PostDialogUserIdSendResponseObject); ok {
+		return validResponse.VisitPostDialogUserIdSendResponse(ctx.Response())
+	} else if response != nil {
+		return fmt.Errorf("unexpected response type: %T", response)
+	}
+	return nil
 }
 
 // PutFriendDeleteUserId operation middleware
